--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -1,11 +1,11 @@
 # Mainnet RPC URLs
-NEXT_PUBLIC_MAINNET_RPC_URL="YOUR_MAINNET_RPC_HERE"
-NEXT_PUBLIC_OPTIMISM_RPC_URL="YOUR_OPTIMISM_RPC_HERE"
-NEXT_PUBLIC_ARBITRUM_RPC_URL="YOUR_ARBITRUM_RPC_HERE"
-NEXT_PUBLIC_BASE_RPC_URL="YOUR_BASE_RPC_HERE"
-NEXT_PUBLIC_SCROLL_RPC_URL="YOUR_SCROLL_RPC_HERE"
-NEXT_PUBLIC_GNOSIS_RPC_URL="YOUR_GNOSIS_RPC_HERE"
-NEXT_PUBLIC_WORLD_RPC_URL="YOUR_WORLD_RPC_HERE"
+NEXT_PUBLIC_MAINNET_RPC_URL="https://eth.llamarpc.com"
+NEXT_PUBLIC_OPTIMISM_RPC_URL="https://optimism.rpc.subquery.network/public"
+NEXT_PUBLIC_ARBITRUM_RPC_URL="https://arbitrum.drpc.org"
+NEXT_PUBLIC_BASE_RPC_URL="https://base.drpc.org"
+NEXT_PUBLIC_SCROLL_RPC_URL="https://1rpc.io/scroll"
+NEXT_PUBLIC_GNOSIS_RPC_URL=" https://gnosis.drpc.org"
+NEXT_PUBLIC_WORLD_RPC_URL="https://worldchain.drpc.org "
 
 # Testnet RPC URLs
 NEXT_PUBLIC_OPTIMISM_SEPOLIA_RPC_URL="YOUR_OPTIMISM_SEPOLIA_RPC_HERE"
