--- a/workers/token-prices-worker/package.json
+++ b/workers/token-prices-worker/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^17.0.45",
     "tslib": "^2.6.0",
     "tsup": "^6.6.3",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "wrangler": "^3.56.0"
   }
 }
